# ctakes-client-py

./: .gitignore  .pre-commit-config.yaml  .pylintrc  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: black.yaml  ci.yaml  pypi.yaml
README/: MatchText.csv  SemGroups_2018.csv  index.html  setup.rst
ctakes/: bsv_reader.py  client.py  ctakes_bsv.py  ctakes_client.py  ctakes_json.py  exceptions.py  filesystem.py  labelstudio.py  transformer.py  typesystem.py
ctakesclient/: __init__.py  client.py  exceptions.py  filesystem.py  text2fhir.py  transformer.py  typesystem.py
ctakesclient/resources/: covid_symptoms.bsv
docs/: api.md  api.rst  conf.py  index.md  index.rst
docs/diagram/: diagram.bnf
resources/: covid_symptoms.bsv  test_negation_hard.txt  test_physician_note.json
scripts/: polarity-diff-report  polarity-diff-report.py
test/: conftest.py  test_client.py  test_client_covid_symptoms.py  test_client_ctakes_rest_server.py  test_filesystem.py  test_negation.py  test_negation_transformer.py  test_resources.py  test_special_chars.py  test_text2fhir.py  test_transformer.py  test_typesystem.py
test-integration/: test_client_covid_symptoms.py  test_examples_not_phi.py  test_negation.py  test_negation_transformer.py
test/integration/: test_client_covid_symptoms.py  test_client_ctakes_rest_server.py  test_negation.py  test_negation_transformer.py
test/resources/: concepts.bsv  covid_symptoms.bsv  semantics.bsv
test/resources/curated/: 1-year-old-exam-hp.txt  2-d-doppler.txt  2-d-echocardiogram-1.txt  2-d-echocardiogram-2.txt  2-d-echocardiogram-3.txt  2-d-echocardiogram-4.txt  3-dimensional-simulation.txt  a-5-month-old-boy-with-cough.txt  abdominal-abscess-id.txt  abdominal-exploration.txt  abdominal-pain-consult.txt  abdominosacrocolpopexy.txt  abnormal-cholesterol-result-letter.txt  abnormal-echocardiogram.txt  acne-soap.txt  (+2347 more)
tests/: conftest.py  test_bsv_reader_covid_symptoms.py  test_client.py  test_client_covid_symptoms.py  test_covid_symptoms_bsv.py  test_ctakes_bsv.py  test_ctakes_client.py  test_ctakes_client_covid_symptoms.py  test_ctakes_json.py  test_ctakes_rest_client.py  test_filesystem.py  test_negation.py  test_negation_transformer.py  test_resources.py  test_text2fhir.py  test_transformer.py  test_typesystem.py
tests/integration/: test_client_covid_symptoms.py  test_client_ctakes_rest_server.py  test_negation.py  test_negation_transformer.py  test_transformers.py
tests/resources/: test_physician_note.json  text2fhir.json  text2fhir.txt
(+19 files in other folders)
