[project]
name = "ctakesclient"
requires-python = ">= 3.8"
dependencies = [
    "fhirclient >= 4.1",
    "httpx",
]
authors = [
  { name="Andy McMurry, PhD", email="andrew.mcmurry@childrens.harvard.edu" },
  { name="Michael Terry", email="michael.terry@childrens.harvard.edu" },
  { name="Tim Miller", email="timothy.miller@childrens.harvard.edu" },
]
description = "cTAKES client support for accessing cTAKES REST services"
readme = "README.md"
license = { text="Apache License 2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/Machine-Learning-for-Medical-Language/ctakes-client-py"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
    "docs/",
    "scripts/",
    "tests/",
    "LICENSE",
]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.black]
line-length = 120

[project.optional-dependencies]
docs = [
    "myst-parser", # markdown support in sphinx
    "sphinx < 6",
    "sphinx-rtd-theme",
]
tests = [
    "ddt",
    "pytest",
    "pytest-cov",
    "respx",
]
dev = [
    "bandit[toml]",
    "black >= 22, < 23",  # keep in rough sync with .pre-commit-config.yaml
    "pre-commit",
    "pycodestyle",
    "pylint",
]